DTO Author implemented